update pattern and project of passwords

--- a/modelos/modelo-webpack/package.json
+++ b/modelos/modelo-webpack/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webtest": "webpack"
+    "webtest": "webpack",
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
