--- a/CursoTS/package.json
+++ b/CursoTS/package.json
@@ -2,11 +2,14 @@
   "name": "typescriptsection",
   "version": "1.0.0",
   "description": "A sectoin of study and lern more about Typescript.   --full-stack-course",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "index.ts",
+  "scripts": {},
   "keywords": [],
   "author": "Gabriel Luis Back",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  }
 }
